--- a/ShaderWinProj/Properties/Resources.resx
+++ b/ShaderWinProj/Properties/Resources.resx
@@ -118,16 +118,13 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="restaurant_vegetables" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\1485995771_vegan_food_meal_dinner_lunch_restaurant_vegetables.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="restaurant_vegetables128" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\1485995735_vegan_food_meal_dinner_lunch_restaurant_vegetables.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="businesswoman_man" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\businesswoman_man.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="settings" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\settings.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="cereal" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\cereal.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
